[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipcheck"
version = "0.1.0"
description = "A lightweight diagnostic tool for AI developers to verify network environment compatibility and IP reputation."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "stormzhang", email = "stormzhang.dev@gmail.com"}]
requires-python = ">=3.10"
keywords = ["ip-check", "network", "ai", "claude", "openai", "diagnostic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.28.0",
    "colorama; sys_platform == 'win32'",
    "tzdata; sys_platform == 'win32'",
]

[project.scripts]
ipcheck = "ipcheck.cli:main"

[project.urls]
Repository = "https://github.com/stormzhang/ip_check"
Issues = "https://github.com/stormzhang/ip_check/issues"
